# hwpx-engine

./: .gitattributes  .gitignore  README.md  plugin.json  pyproject.toml
.claude-plugin/: marketplace.json
skills/hwpx/: SKILL.md
skills/hwpx/references/: document-editing-guide.md  hwp-to-hwpx-guide.md  pdf-verification-guide.md  table-editing-guide.md  template-analysis-guide.md
skills/hwpx/references/examples/: builder-annual-report.py  builder-issue-paper.py  metadata-annual-report.json  metadata-issue-paper.json  module-body-example.py  module-cover-example.py
src/hwpx_engine/: __init__.py  build.py  charpr_manager.py  converter.py  editor.py  elements.py  formatter.py  hwpx_doc.py  registry.py  tables.py  utils.py  validator.py  xml_primitives.py
src/hwpx_engine/_ps1/: __init__.py  set_hwp_appid.ps1
tests/: conftest.py  test_build.py  test_converter.py  test_editor.py  test_elements.py  test_pdf.py  test_registry.py  test_tables.py  test_validator.py
tests/fixtures/: sample.hwp
