[project]
name = "hwpx-plugin"
# Version must match plugin.json and .claude-plugin/marketplace.json.
# pyproject version skipped 1.3.x — plugin.json/marketplace were bumped for doc-only
# fixes without affecting Python API. v1.4.0 is the first Python-API-affecting release
# since 1.2.0 (adds hwp_to_hwpx_pdf batch converter).
version = "1.4.0"
requires-python = ">=3.10"
dependencies = [
    "lxml>=4.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
mcp = ["mcp"]
pdf = ["pyhwpx"]

[project.scripts]
hwpx-apply-appid = "hwpx_engine.converter:_cli_apply_appid"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hwpx_engine._ps1" = ["*.ps1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "pdf: tests requiring pyhwpx and Hangul WP installed (deselect with '-m not pdf')",
]
